<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="placeholder">This is where we are going to add the actual text to be shown! Hurray!!</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="highest_score">Highest Score: 0</string>
    <string name="current_score">Current Score : 0</string>
</resources>